--- a/contract/package.json
+++ b/contract/package.json
@@ -2,6 +2,11 @@
   "name": "contract",
   "version": "1.0.0",
   "type": "module",
+  "scripts": {
+    "compile": "hardhat compile",
+    "deploy": "hardhat run scripts/deploy.ts --network mantleSepolia",
+    "test": "hardhat test"
+  },
   "devDependencies": {
     "@nomicfoundation/hardhat-ethers": "^4.0.3",
     "@nomicfoundation/hardhat-ignition": "^3.0.6",
@@ -11,6 +16,7 @@
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.19.3",
     "chai": "^5.3.3",
+    "dotenv": "^17.2.3",
     "ethers": "^6.16.0",
     "forge-std": "github:foundry-rs/forge-std#v1.9.4",
     "hardhat": "^3.1.2",
